# cc-nim-cn

./: .env.example  .gitignore  CONNECTION_POOL_FIX.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROJECT.md  README.md  README_TELEGRAM_HTTP_CLIENT.md  claude-nim-bridge.service.example  com.cc-nim.plist.example  com.claude-nim-bridge.plist.example  configure_env.sh  deploy.sh  install_and_start.sh  launchd.err  manage.sh  nvidia_nim_models.json  pyproject.toml  quickstart.py  run.sh  server.py  server_debug.jsonl  setup_logging.py  start.sh  start_bot.py  start_dev.sh  start_service.sh  stop_service.sh  test_bot_simple.py  test_http_connectivity.py  test_import.py  test_telegram_bot.py  test_telegram_direct.py  test_telegram_http_client.py
api/: app.py  dependencies.py  request_utils.py  routes.py
config/: settings.py
messaging/: telegram.py  telegram_http_client.py
providers/: model_utils.py  nvidia_mixins.py  nvidia_nim.py
providers/utils/: sse_builder.py
tests/: conftest.py  test_config.py  test_dependencies.py  test_nvidia_nim.py  test_routes_optimizations.py
